force-app/main/default/objects/FeedbackAuditTrail__c/FeedbackAuditTrail__c.object-meta.xml
<CustomObject>
    <description>Audit trail for tracking all access and modifications to interview feedback data</description>
    <label>Feedback Audit Trail</label>
    <nameField>
        <displayFormat>AT-{00000000}</displayFormat>
        <label>Audit Trail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Audit Trails</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>