force-app/main/default/objects/FeedbackAuditTrail__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Type of action performed on the record</description>
    <inlineHelpText>The type of action that was performed (Create, Read, Update, Delete, etc.)</inlineHelpText>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Data Anonymization</fullName>
            </value>
            <value>
                <fullName>Data Deletion</fullName>
            </value>
            <value>
                <fullName>Data Archival</fullName>
            </value>
            <value>
                <fullName>Data Encryption</fullName>
            </value>
            <value>
                <fullName>Share Access</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>