force-app/main/default/objects/FeedbackAuditTrail__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Additional details about the action performed</description>
    <inlineHelpText>Additional context and details about what was done</inlineHelpText>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>