force-app/main/default/objects/FeedbackAuditTrail__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <description>IP address from which the action was performed</description>
    <inlineHelpText>The IP address of the client that performed this action</inlineHelpText>
    <label>IP Address</label>
    <length>45</length>
    <type>Text</type>
</CustomField>