force-app/main/default/objects/FeedbackAuditTrail__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>ID of the record that was accessed or modified</description>
    <inlineHelpText>The Salesforce ID of the record that was accessed or modified</inlineHelpText>
    <label>Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>