force-app/main/default/objects/FeedbackAuditTrail__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Date and time when the action was performed</description>
    <inlineHelpText>The exact date and time when this action was performed</inlineHelpText>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>