force-app/main/default/objects/FeedbackAuditTrail__c/fields/User_Agent__c.field-meta.xml
<CustomField>
    <fullName>User_Agent__c</fullName>
    <description>User agent string from the client browser or application</description>
    <inlineHelpText>The user agent string identifying the browser or application used</inlineHelpText>
    <label>User Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>