force-app/main/default/objects/FeedbackAuditTrail__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>ID of the user who performed the action</description>
    <inlineHelpText>The Salesforce user ID of the person who performed this action</inlineHelpText>
    <label>User ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>